--- a/video/poc.html
+++ b/video/poc.html
@@ -12,73 +12,70 @@
     .info {
       margin-bottom: 20px;
     }
+    button {
+      padding: 10px 20px;
+      font-size: 16px;
+      cursor: pointer;
+    }
   </style>
 </head>
 <body>
+  <button id="runCodeButton">Run Code</button>
+
   <script>
+    // window.onload = function() {
+    //   if (window.__windvane__) {
+    //     window.__windvane__.onSuccess = function(callbackFunction, data) {
+    //       alert("data " + JSON.stringify(data));
+    //     };
+    //   }
+    // };
 
-    window.onload = function() {
-      if (window.__windvane__) {
-        //alert("test");
-        window.__windvane__.onSuccess = function(callbackFunction, data) {
-          alert("data " + JSON.stringify(data));
-        } 
-      }
+    var params = {
+      // 是否获取高精度的位置
+      enableHighAccuracy: true,
+      // 是否获取地址描述
+      address: true
+    };
+
+    function successCallback(e) {
+      alert('success:' + JSON.stringify(e));
     }
-  
+    function failureCallback(e) {
+      alert('failure:' + JSON.stringify(e));
+    }
 
-  var params = {
-        // 是否获取高精度的位置
-        enableHighAccuracy: true,
-        // 是否获取地址描述
-        address: true
-};
+    // Add event listener to the button to execute different code snippets
+    document.getElementById('runCodeButton').addEventListener('click', function() {
+      // Example: Execute code based on user choice or predefined logic
+      let userChoice = prompt("Choose an action: 1 for Location, 2 for File, 3 for Cookies");
 
-function successCallback(e) {
-    alert('success:' + JSON.stringify(e));
-}
-function failureCallback(e) {
-    alert('failure:' + JSON.stringify(e));
-}
-window.__windvane__.nativeCall('WVLocation.getLocation', JSON.stringify(params), "successCallback", "failureCallback");
- //window.__windvane__.nativeCall('WVLocation.requestLocation', JSON.stringify(params), "successCallback", "failureCallback");
-
-// write file
-var file_params = {
-  "mode": "overwrite",
-  "data": "123",
-  "fileName": "test.txt",
-  "share": true,
-}
-//window.__windvane__.nativeCall('WVFile.write', JSON.stringify(file_params), "successCallback", "failureCallback");
-
-// cookie
-var cookie_params = {
-  url : "www.youku.com"
-}
-window.__windvane__.nativeCall('WVCookie.readCookies', JSON.stringify(cookie_params), "successCallback", "failureCallback");
-
-
-var cookie_params_2 = {
-  url : "www.jd.com"
-}
-window.__windvane__.nativeCall('WVCookie.readCookies', JSON.stringify(cookie_params_2), "successCallback", "failureCallback");
-// jieping
-// var jieping_params = {
-//   inAlbum: true
-// };
-// window.__windvane__.nativeCall('WVScreen.capture', JSON.stringify(jieping_params), "successCallback", "failureCallback");
-
-
-
-
-// blue_tooth_params
-// var blue_tooth_params = {
-//   deviceId: "123",
-//   serviceId: "123",
-// }
-// window.__windvane__.nativeCall('WVBluetooth.writeValue', JSON.stringify(blue_tooth_params), "successCallback", "failureCallback");
-</script>
-
+      switch (userChoice) {
+        case "1":
+          // Get location
+          window.__windvane__.nativeCall('WVLocation.getLocation', JSON.stringify(params), "successCallback", "failureCallback");
+          break;
+        case "2":
+          // Write file
+          var file_params = {
+            "mode": "overwrite",
+            "data": "123",
+            "fileName": "test.txt",
+            "share": true,
+          };
+          window.__windvane__.nativeCall('WVFile.write', JSON.stringify(file_params), "successCallback", "failureCallback");
+          break;
+        case "3":
+          // Read cookies
+          var cookie_params = {
+            url: "www.youku.com"
+          };
+          window.__windvane__.nativeCall('WVCookie.readCookies', JSON.stringify(cookie_params), "successCallback", "failureCallback");
+          break;
+        default:
+          alert("Invalid choice");
+      }
+    });
+  </script>
 </body>
 </html>
