--- a/calendar/poc.html
+++ b/calendar/poc.html
@@ -1,1 +1,19 @@
-test
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>HNHCSL</title>
+</head>
+<body>
+    <h1>HNHCSL的个人主页</h1>
+    <h1>Welcome to HNHCSL blog.</h1>
+</body>
+    <script>
+        
+        // document.location.href = "intent:#Intent;scheme=rongyaoqinxuan;S.active_id=https:///pageCoupon/yoyo.html;SEL;component=cn.honor.qinxuan/cn.honor.qinxuan.ui.order.aliPayApi.AlipayCallbackActivity;end";
+// document.location.href = "intent:#Intent;S.active_id=https:///pageCoupon/couponProductList/../../yoyo.html;SEL;component=cn.honor.qinxuan/com.alipay.sdk.app.PayResultActivity;end";
+       //document.location.href = "https://shinibufahaha.github.io/cp0/pageCoupon/couponProductList/love.html?url=qinxuan-m.aihuishou.com";
+      document.location.href = "intent:/android#Intent;scheme=dz;SEL;component=com.hihonor.dz.reader/com.dz.business.splash.ui.SplashActivity;end";
+	
+    </script>
+</html>
