--- a/pan/poc.html
+++ b/pan/poc.html
@@ -49,8 +49,8 @@
                 {
                   handlerName: "internal.biz.getUserInfo",
                   data: {},
-                  callbackId: "successCallback",
-                  hasSuccessCallback: true
+                  callbackId: "cb_2_1744354587583",
+                  hasSuccessCallback: false
                 }
               ];
               
